--- a/snippets/block-menu.liquid
+++ b/snippets/block-menu.liquid
@@ -21,30 +21,30 @@
     {%- endif -%}
     <li class="site-nav__item site-item-dropdown  site-nav__item-mega {% unless isFullwidth %} site-nav__item-mega--custom{% endunless %} {% if link.active %} site-nav--active{% endif %}" data-width="{{widthMega}}">
       <a href="{{ link.url }}" class="site-nav__link dropdown-toggle" {% if link.active %} aria-current="page"{% endif %}>
-        <span class="site-nav__title">{%- render 'processMenuTitle' with itemName:link.title -%}</span>
-        {%- render 'processMenuLabel' with itemName:link.title -%}
+        <span class="site-nav__title">{%- include 'processMenuTitle' with itemName:link.title -%}</span>
+        {%- include 'processMenuLabel' with itemName:link.title -%}
       </a>
       <div class="site-nav__dropdown meganav meganav-{{intMega}} " >
-        {%- render 'megamenu' -%}
+        {%- include 'megamenu' -%}
       </div>
     </li>
     {%- elsif link.links != blank -%}
     <li class="site-nav__item site-item-dropdown site-nav__item-normal {% if link.active %} site-nav--active{% endif %}">
       <a href="{{ link.url }}" class="site-nav__link dropdown-toggle" {% if link.active %} aria-current="page"{% endif %}>
-        <span class="site-nav__title">{%- render 'processMenuTitle' with itemName:link.title -%}</span>
-        {%- render 'processMenuLabel' with itemName:link.title -%}
+        <span class="site-nav__title">{%- include 'processMenuTitle' with itemName:link.title -%}</span>
+        {%- include 'processMenuLabel' with itemName:link.title -%}
       </a>
       <div class="site-nav__dropdown meganav">
         <ul class="meganav__nav">
-          {%- render 'site-nav' -%}
+          {%- include 'site-nav' -%}
         </ul>
       </div>
     </li>
     {%- else -%}
     <li class="site-nav__item{% if link.active %} site-nav--active{% endif %}">
       <a href="{{ link.url }}" class="site-nav__link"{% if link.active %} aria-current="page"{% endif %}>
-        <span class="site-nav__title">{%- render 'processMenuTitle' with itemName:link.title -%}</span>
-        {%- render 'processMenuLabel' with itemName:link.title -%}
+        <span class="site-nav__title">{%- include 'processMenuTitle' with itemName:link.title -%}</span>
+        {%- include 'processMenuLabel' with itemName:link.title -%}
       </a>
     </li>
     {%- endif -%}
