--- a/snippets/blog-grid-1.liquid
+++ b/snippets/blog-grid-1.liquid
@@ -10,7 +10,7 @@
         <div class="article__photo-wrapper" style="padding-top:{{ 1 | divided_by: article.image.aspect_ratio | times: 100}}%;">
           {%- assign img_url = article.image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
           <img class="lazyload"
-               src="{%- render 'srcBlank' -%}"
+               src="{%- include 'srcBlank' -%}"
                data-src="{{ img_url }}"
                data-widths="[360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]"
                data-aspectratio="{{ article.image.aspect_ratio }}"
