--- a/snippets/htmlbuilder-banner.liquid
+++ b/snippets/htmlbuilder-banner.liquid
@@ -52,8 +52,8 @@
     </textarea>
   </div>
   <div class="col-md-2 col-mid">
-    <button class="btn btn-outline-secondary btn-html-view" data-id="Banner">Preview{%- render 'icon-arrow-right' -%}</button>
-    <button class="btn btn-secondary btn-html-copy" data-id="Banner">Copy {%- render 'icon-copy' -%}</button>
+    <button class="btn btn-outline-secondary btn-html-view" data-id="Banner">Preview{%- include 'icon-arrow-right' -%}</button>
+    <button class="btn btn-secondary btn-html-copy" data-id="Banner">Copy {%- include 'icon-copy' -%}</button>
   </div>
   <div class="col-md-3 col-right">
     <div id="htmlView-Banner" class="html-view shadow html-view--widow">
