--- a/snippets/htmlbuilder-icon.liquid
+++ b/snippets/htmlbuilder-icon.liquid
@@ -1,89 +1,89 @@
 <h4 id="html-icon" class="html-title pt-4">#Icon <small>(Click to copy code)</small></h4>
 <div class="row">
-  {%- render 'generateIcon' with 'icon-app' -%}
-  {%- render 'generateIcon' with 'icon-app-alt' -%}
-  {%- render 'generateIcon' with 'icon-arrow-down' -%}
-  {%- render 'generateIcon' with 'icon-arrow-left' -%}
-  {%- render 'generateIcon' with 'icon-arrow-right' -%}
-  {%- render 'generateIcon' with 'icon-arrow-up' -%}
-  {%- render 'generateIcon' with 'icon-arrow-thin-down' -%}
-  {%- render 'generateIcon' with 'icon-arrow-thin-left' -%}
-  {%- render 'generateIcon' with 'icon-arrow-thin-right' -%}
-  {%- render 'generateIcon' with 'icon-arrow-thin-up' -%}
-  {%- render 'generateIcon' with 'icon-chevron-down' -%}
-  {%- render 'generateIcon' with 'icon-chevron-left' -%}
-  {%- render 'generateIcon' with 'icon-chevron-right' -%}
-  {%- render 'generateIcon' with 'icon-chevron-up' -%}
-  {%- render 'generateIcon' with 'icon-bag' -%}
-  {%- render 'generateIcon' with 'icon-cart' -%}
-  {%- render 'generateIcon' with 'icon-circle' -%}
-  {%- render 'generateIcon' with 'icon-check-circle' -%}
-  {%- render 'generateIcon' with 'icon-coffee' -%}
-  {%- render 'generateIcon' with 'icon-square' -%}
-  {%- render 'generateIcon' with 'icon-check-square' -%}
-  {%- render 'generateIcon' with 'icon-checkout' -%}
-  {%- render 'generateIcon' with 'icon-close' -%}
-  {%- render 'generateIcon' with 'icon-contract' -%}
-  {%- render 'generateIcon' with 'icon-copy' -%}
-  {%- render 'generateIcon' with 'icon-divide' -%}
-  {%- render 'generateIcon' with 'icon-dot-circle' -%}
-  {%- render 'generateIcon' with 'icon-download' -%}
-  {%- render 'generateIcon' with 'icon-envelope' -%}
-  {%- render 'generateIcon' with 'icon-exchange' -%}
-  {%- render 'generateIcon' with 'icon-facebook' -%}
-  {%- render 'generateIcon' with 'icon-gear' -%}
-  {%- render 'generateIcon' with 'icon-gear-alt' -%}
-  {%- render 'generateIcon' with 'icon-globe-europe' -%}
-  {%- render 'generateIcon' with 'icon-hamburger' -%}
-  {%- render 'generateIcon' with 'icon-heart' -%}
-  {%- render 'generateIcon' with 'icon-heart-solid' -%}
-  {%- render 'generateIcon' with 'icon-home' -%}
-  {%- render 'generateIcon' with 'icon-idea' -%}
-  {%- render 'generateIcon' with 'icon-idea-2' -%}
-  {%- render 'generateIcon' with 'icon-instagram' -%}
-  {%- render 'generateIcon' with 'icon-linkedin-in' -%}
-  {%- render 'generateIcon' with 'icon-lock' -%}
-  {%- render 'generateIcon' with 'icon-mail' -%}
-  {%- render 'generateIcon' with 'icon-minus' -%}
-  {%- render 'generateIcon' with 'icon-mobile-phone' -%}
-  {%- render 'generateIcon' with 'icon-more' -%}
-  {%- render 'generateIcon' with 'icon-notebook' -%}
-  {%- render 'generateIcon' with 'icon-package' -%}
-  {%- render 'generateIcon' with 'icon-pause' -%}
-  {%- render 'generateIcon' with 'icon-pencil-ruler' -%}
-  {%- render 'generateIcon' with 'icon-phone' -%}
-  {%- render 'generateIcon' with 'icon-phone-alt' -%}
-  {%- render 'generateIcon' with 'icon-picture' -%}
-  {%- render 'generateIcon' with 'icon-picture-alt' -%}
-  {%- render 'generateIcon' with 'icon-pin' -%}
-  {%- render 'generateIcon' with 'icon-pin-2' -%}
-  {%- render 'generateIcon' with 'icon-pinterest' -%}
-  {%- render 'generateIcon' with 'icon-placeholder' -%}
-  {%- render 'generateIcon' with 'icon-play' -%}
-  {%- render 'generateIcon' with 'icon-plus' -%}
-  {%- render 'generateIcon' with 'icon-quickview' -%}
-  {%- render 'generateIcon' with 'icon-quote' -%}
-  {%- render 'generateIcon' with 'icon-remove' -%}
-  {%- render 'generateIcon' with 'icon-route' -%}
-  {%- render 'generateIcon' with 'icon-search' -%}
-  {%- render 'generateIcon' with 'icon-send' -%}
-  {%- render 'generateIcon' with 'icon-sign-out' -%}
-  {%- render 'generateIcon' with 'icon-sliders' -%}
-  {%- render 'generateIcon' with 'icon-snapchat' -%}
-  {%- render 'generateIcon' with 'icon-speaker' -%}
-  {%- render 'generateIcon' with 'icon-star' -%}
-  {%- render 'generateIcon' with 'icon-star-alt' -%}
-  {%- render 'generateIcon' with 'icon-trophy' -%}
-  {%- render 'generateIcon' with 'icon-trophy-2' -%}
-  {%- render 'generateIcon' with 'icon-truck' -%}
-  {%- render 'generateIcon' with 'icon-tumblr' -%}
-  {%- render 'generateIcon' with 'icon-twitter' -%}
-  {%- render 'generateIcon' with 'icon-x' -%}
-  {%- render 'generateIcon' with 'icon-tiktok' -%}
-  {%- render 'generateIcon' with 'icon-typography' -%}
-  {%- render 'generateIcon' with 'icon-user' -%}
-  {%- render 'generateIcon' with 'icon-view' -%}
-  {%- render 'generateIcon' with 'icon-vimeo' -%}
-  {%- render 'generateIcon' with 'icon-youtube' -%}
+  {%- include 'generateIcon' with 'icon-app' -%}
+  {%- include 'generateIcon' with 'icon-app-alt' -%}
+  {%- include 'generateIcon' with 'icon-arrow-down' -%}
+  {%- include 'generateIcon' with 'icon-arrow-left' -%}
+  {%- include 'generateIcon' with 'icon-arrow-right' -%}
+  {%- include 'generateIcon' with 'icon-arrow-up' -%}
+  {%- include 'generateIcon' with 'icon-arrow-thin-down' -%}
+  {%- include 'generateIcon' with 'icon-arrow-thin-left' -%}
+  {%- include 'generateIcon' with 'icon-arrow-thin-right' -%}
+  {%- include 'generateIcon' with 'icon-arrow-thin-up' -%}
+  {%- include 'generateIcon' with 'icon-chevron-down' -%}
+  {%- include 'generateIcon' with 'icon-chevron-left' -%}
+  {%- include 'generateIcon' with 'icon-chevron-right' -%}
+  {%- include 'generateIcon' with 'icon-chevron-up' -%}
+  {%- include 'generateIcon' with 'icon-bag' -%}
+  {%- include 'generateIcon' with 'icon-cart' -%}
+  {%- include 'generateIcon' with 'icon-circle' -%}
+  {%- include 'generateIcon' with 'icon-check-circle' -%}
+  {%- include 'generateIcon' with 'icon-coffee' -%}
+  {%- include 'generateIcon' with 'icon-square' -%}
+  {%- include 'generateIcon' with 'icon-check-square' -%}
+  {%- include 'generateIcon' with 'icon-checkout' -%}
+  {%- include 'generateIcon' with 'icon-close' -%}
+  {%- include 'generateIcon' with 'icon-contract' -%}
+  {%- include 'generateIcon' with 'icon-copy' -%}
+  {%- include 'generateIcon' with 'icon-divide' -%}
+  {%- include 'generateIcon' with 'icon-dot-circle' -%}
+  {%- include 'generateIcon' with 'icon-download' -%}
+  {%- include 'generateIcon' with 'icon-envelope' -%}
+  {%- include 'generateIcon' with 'icon-exchange' -%}
+  {%- include 'generateIcon' with 'icon-facebook' -%}
+  {%- include 'generateIcon' with 'icon-gear' -%}
+  {%- include 'generateIcon' with 'icon-gear-alt' -%}
+  {%- include 'generateIcon' with 'icon-globe-europe' -%}
+  {%- include 'generateIcon' with 'icon-hamburger' -%}
+  {%- include 'generateIcon' with 'icon-heart' -%}
+  {%- include 'generateIcon' with 'icon-heart-solid' -%}
+  {%- include 'generateIcon' with 'icon-home' -%}
+  {%- include 'generateIcon' with 'icon-idea' -%}
+  {%- include 'generateIcon' with 'icon-idea-2' -%}
+  {%- include 'generateIcon' with 'icon-instagram' -%}
+  {%- include 'generateIcon' with 'icon-linkedin-in' -%}
+  {%- include 'generateIcon' with 'icon-lock' -%}
+  {%- include 'generateIcon' with 'icon-mail' -%}
+  {%- include 'generateIcon' with 'icon-minus' -%}
+  {%- include 'generateIcon' with 'icon-mobile-phone' -%}
+  {%- include 'generateIcon' with 'icon-more' -%}
+  {%- include 'generateIcon' with 'icon-notebook' -%}
+  {%- include 'generateIcon' with 'icon-package' -%}
+  {%- include 'generateIcon' with 'icon-pause' -%}
+  {%- include 'generateIcon' with 'icon-pencil-ruler' -%}
+  {%- include 'generateIcon' with 'icon-phone' -%}
+  {%- include 'generateIcon' with 'icon-phone-alt' -%}
+  {%- include 'generateIcon' with 'icon-picture' -%}
+  {%- include 'generateIcon' with 'icon-picture-alt' -%}
+  {%- include 'generateIcon' with 'icon-pin' -%}
+  {%- include 'generateIcon' with 'icon-pin-2' -%}
+  {%- include 'generateIcon' with 'icon-pinterest' -%}
+  {%- include 'generateIcon' with 'icon-placeholder' -%}
+  {%- include 'generateIcon' with 'icon-play' -%}
+  {%- include 'generateIcon' with 'icon-plus' -%}
+  {%- include 'generateIcon' with 'icon-quickview' -%}
+  {%- include 'generateIcon' with 'icon-quote' -%}
+  {%- include 'generateIcon' with 'icon-remove' -%}
+  {%- include 'generateIcon' with 'icon-route' -%}
+  {%- include 'generateIcon' with 'icon-search' -%}
+  {%- include 'generateIcon' with 'icon-send' -%}
+  {%- include 'generateIcon' with 'icon-sign-out' -%}
+  {%- include 'generateIcon' with 'icon-sliders' -%}
+  {%- include 'generateIcon' with 'icon-snapchat' -%}
+  {%- include 'generateIcon' with 'icon-speaker' -%}
+  {%- include 'generateIcon' with 'icon-star' -%}
+  {%- include 'generateIcon' with 'icon-star-alt' -%}
+  {%- include 'generateIcon' with 'icon-trophy' -%}
+  {%- include 'generateIcon' with 'icon-trophy-2' -%}
+  {%- include 'generateIcon' with 'icon-truck' -%}
+  {%- include 'generateIcon' with 'icon-tumblr' -%}
+  {%- include 'generateIcon' with 'icon-twitter' -%}
+  {%- include 'generateIcon' with 'icon-x' -%}
+  {%- include 'generateIcon' with 'icon-tiktok' -%}
+  {%- include 'generateIcon' with 'icon-typography' -%}
+  {%- include 'generateIcon' with 'icon-user' -%}
+  {%- include 'generateIcon' with 'icon-view' -%}
+  {%- include 'generateIcon' with 'icon-vimeo' -%}
+  {%- include 'generateIcon' with 'icon-youtube' -%}
 </div>
 <hr />
