--- a/snippets/htmlbuilder-text.liquid
+++ b/snippets/htmlbuilder-text.liquid
@@ -30,8 +30,8 @@
     </textarea>
   </div>
   <div class="col-md-2 col-mid">
-    <button class="btn btn-outline-secondary btn-html-view" data-id="Text">Preview{%- render 'icon-arrow-right' -%}</button>
-    <button class="btn btn-secondary btn-html-copy" data-id="Text">Copy {%- render 'icon-copy' -%}</button>
+    <button class="btn btn-outline-secondary btn-html-view" data-id="Text">Preview{%- include 'icon-arrow-right' -%}</button>
+    <button class="btn btn-secondary btn-html-copy" data-id="Text">Copy {%- include 'icon-copy' -%}</button>
   </div>
   <div class="col-md-3 col-right">
     <div id="htmlView-Text" class="html-view shadow html-view--widow">
