--- a/snippets/popup-compare.liquid
+++ b/snippets/popup-compare.liquid
@@ -4,7 +4,7 @@
   <div class="modal-dialog modal-dialog--compare modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header p-0">
-        <button type="button" class="close" data-dismiss="modal">{%- render 'icon-close' -%}</button>
+        <button type="button" class="close" data-dismiss="modal">{%- include 'icon-close' -%}</button>
       </div>
       <div class="modal-body p-5">
         <div class="row justify-content-center js-compare-content">
