--- a/snippets/product-grid-4.liquid
+++ b/snippets/product-grid-4.liquid
@@ -6,22 +6,22 @@
       {%- assign img_url = image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
       <img class="lazyload transition first-image"
            data-src="{{ img_url }}"
-           src="{%- render 'srcBlank' -%}"
+           src="{%- include 'srcBlank' -%}"
            data-sizes="auto"
            alt="{{ image.alt | escape }}">
-           {% render 'second-image'%}
+           {% include 'second-image'%}
     </a>
 
     <div class="product-card__overlay d-flex justify-content-center flex-column product-card__overlaytop">
       {%- if settings.enable_wishlsit -%}
       <span data-toggle="tooltip" data-placement="left" data-tooltipalltimes="true" class="btn btn-theme gradient-theme-vertical product-card__overlay-btn js-btn-wishlist" title="{{ 'products.product.wishlist_text' | t }}" data-handle="{{product.handle}}">
-        {%- render 'icon-heart' -%}
+        {%- include 'icon-heart' -%}
       </span>
       {%- endif -%}
       {%- if settings.enable_compare -%}
       <span data-tooltip="true" data-placement="left" class="btn btn-theme gradient-theme-vertical product-card__overlay-btn js-btn-compare" title="{{ 'products.product.compare_text' | t }}" data-handle="{{product.handle}}">
-        {%- render 'icon-exchange' -%}
-        {%- render 'icon-close' -%}
+        {%- include 'icon-exchange' -%}
+        {%- include 'icon-close' -%}
         <span>{{ 'products.product.compare_text' | t }}</span>
       </span>
       {%- endif -%}
@@ -31,26 +31,26 @@
         
         <span>{{ 'products.product.quickview_text' | t }}</span>
         {%-comment-%}
-        {%- render 'icon-quickview' -%}
+        {%- include 'icon-quickview' -%}
         {%-endcomment-%}
       </span>
       <span data-tooltip="false" data-placement="left" class="btn btn-theme gradient-theme-vertical product-card__overlay-btn js-grid-cart {% unless product.available %} disabled{% endunless%}" title="{{ 'products.product.add_to_cart' | t }}" data-id="{{product.selected_or_first_available_variant.id}}">
         <span>{{ 'products.product.add_to_cart' | t }}</span>
         <div class="product-card__loading spinner-{{settings.loading}}" role="status"></div>
         {%-comment-%}
-        {%- render 'icon-cart-bold' -%}
+        {%- include 'icon-cart-bold' -%}
         {%-endcomment-%}
         </span>
     </div>
     
 
-    {%- if settings.enable_countdown_card -%}{%- render 'product-countdown' -%}{%- endif -%}
+    {%- if settings.enable_countdown_card -%}{%- include 'product-countdown' -%}{%- endif -%}
     {%- if settings.enablevideo -%}
       {% for media in product.media %}
         {% render 'productVideo', media: media %}
       {% endfor %}
     {%- endif -%}
-    {% render 'product-label' %}
+    {% include 'product-label' %}
   </div>
   <div class="product-card__info">
 
@@ -85,6 +85,6 @@
       {{ 'products.product.sold_out' | t }}
     </div>
     {%- endif -%}
-    {%- render 'swatch-grid-1' -%}
+    {%- include 'swatch-grid-1' -%}
   </div>
 </div>
