--- a/snippets/product-grid-5.liquid
+++ b/snippets/product-grid-5.liquid
@@ -6,16 +6,16 @@
         {%- assign img_url = image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
         <img class="lazyload transition first-image"
              data-src="{{ img_url }}"
-             src="{%- render 'srcBlank' -%}"
+             src="{%- include 'srcBlank' -%}"
              data-sizes="auto"
              alt="{{ image.alt | escape }}">
-             {% render 'second-image'%}
+             {% include 'second-image'%}
       </a>
   
       <div class="product-card__overlay d-flex justify-content-center flex-column product-card__overlaytop">
         {%- if settings.enable_wishlsit -%}
         <span data-toggle="tooltip" data-placement="left" data-tooltipalltimes="true" class="btn btn-theme gradient-theme-vertical product-card__overlay-btn js-btn-wishlist" title="{{ 'products.product.wishlist_text' | t }}" data-handle="{{product.handle}}">
-          {%- render 'icon-heart' -%}
+          {%- include 'icon-heart' -%}
         </span>
         {%- endif -%}
       </div>
@@ -27,7 +27,7 @@
       </div> {% endcomment %}
       
   
-      {%- if settings.enable_countdown_card -%}{%- render 'product-countdown' -%}{%- endif -%}
+      {%- if settings.enable_countdown_card -%}{%- include 'product-countdown' -%}{%- endif -%}
   
       {%- if settings.enablevideo -%}
       {% for media in product.media %}
@@ -35,7 +35,7 @@
       {% endfor %}
     {%- endif -%}
   
-      {% render 'product-label' %}
+      {% include 'product-label' %}
     </div>
     <div class="product-card__info">
   
@@ -70,6 +70,6 @@
         {{ 'products.product.sold_out' | t }}
       </div>
       {%- endif -%}
-      {%- render 'swatch-grid-1' -%}
+      {%- include 'swatch-grid-1' -%}
     </div>
   </div>
