--- a/snippets/shortcode-alert.liquid
+++ b/snippets/shortcode-alert.liquid
@@ -1,5 +1,5 @@
-{% capture type %}{% render 'shortcode-render' render:'type' default:'' %}{% endcapture %}
-{% capture message %}{% render 'shortcode-render' render:'message' default:'' %}{% endcapture %}
+{% capture type %}{% include 'shortcode-render' render:'type' default:'' %}{% endcapture %}
+{% capture message %}{% include 'shortcode-render' render:'message' default:'' %}{% endcapture %}
 {% if message != '' %}
 {% assign type = type | downcase %}
 <div class="alert alert-{{type}}" role="alert">{{message}}</div>
