--- a/snippets/sidebar.liquid
+++ b/snippets/sidebar.liquid
@@ -1,2 +1,2 @@
-{%- render 'sidebar-categories' -%}
-{%- render 'sidebar-shopby' -%}
+{%- include 'sidebar-categories' -%}
+{%- include 'sidebar-shopby' -%}
