--- a/snippets/sticky-cart.liquid
+++ b/snippets/sticky-cart.liquid
@@ -178,8 +178,8 @@
         {%- endunless -%}
       </button>
       <button id="js-sticky-close">
-        {%- render 'icon-close' -%}
-        {%- render 'icon-cart' -%}
+        {%- include 'icon-close' -%}
+        {%- include 'icon-cart' -%}
       </button>
     </div>
   </div>
