--- a/snippets/block-currencies.liquid
+++ b/snippets/block-currencies.liquid
@@ -1,12 +1,12 @@
 {%- if settings.show_multiple_currencies -%}
 <div class="block_currencies">
   <div data-toggle="dropdown" class="dropdown-toggle" title="Currencies">
-    <span class="pre-currencies"><img src="{%- render 'processCurrencyImage' with shop.currency -%}" alt="{{shop.currency}}">{{shop.currency}}</span>
+    <span class="pre-currencies"><img src="{%- include 'processCurrencyImage' with shop.currency -%}" alt="{{shop.currency}}">{{shop.currency}}</span>
   </div>
   <ul id="currencies" class="list-unstyled dropdown-menu shadow">
     <li>
       <a data-currency="{{shop.currency}}" class="selected" href="javascript:void(0)" rel="nofollow">
-        <img src="{%- render 'processCurrencyImage' with shop.currency -%}" alt="{{shop.currency}}">
+        <img src="{%- include 'processCurrencyImage' with shop.currency -%}" alt="{{shop.currency}}">
         {{shop.currency}}
       </a>
     </li>
@@ -16,7 +16,7 @@
     {%- assign currency = currencies[i] -%}
     <li>
       <a data-currency="{{currency}}" href="javascript:void(0)" rel="nofollow">
-        <img src="{%- render 'processCurrencyImage' with currency -%}" alt="{{currency}}" />
+        <img src="{%- include 'processCurrencyImage' with currency -%}" alt="{{currency}}" />
         {{currency}}
       </a>
     </li>
