--- a/snippets/footer-socical.liquid
+++ b/snippets/footer-socical.liquid
@@ -1,7 +1,7 @@
 {%- if settings.social_facebook_link != blank -%}
             <li class="list-inline-item">
               <a href="{{ settings.social_facebook_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Facebook' }}">
-                {%- render 'icon-facebook' -%}
+                {%- include 'icon-facebook' -%}
                 <span class="icon__fallback-text">Fb</span>
               </a>
             </li>
@@ -9,7 +9,7 @@
             {%- if settings.social_twitter_link != blank -%}
             <li class="list-inline-item">
               <a href="{{ settings.social_twitter_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Twitter' }}">
-                {%- render 'icon-x' -%}
+                {%- include 'icon-x' -%}
                 <span class="icon__fallback-text">Tw</span>
               </a>
             </li>
@@ -17,7 +17,7 @@
             {%- if settings.social_pinterest_link != blank -%}
             <li class="list-inline-item">
               <a href="{{ settings.social_pinterest_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Pinterest' }}">
-                {%- render 'icon-pinterest' -%}
+                {%- include 'icon-pinterest' -%}
                 <span class="icon__fallback-text">Pin</span>
               </a>
             </li>
@@ -25,7 +25,7 @@
             {%- if settings.social_instagram_link != blank -%}
             <li class="list-inline-item">
               <a href="{{ settings.social_instagram_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Instagram' }}">
-                {%- render 'icon-instagram' -%}
+                {%- include 'icon-instagram' -%}
                 <span class="icon__fallback-text">Ins</span>
               </a>
             </li>
@@ -33,7 +33,7 @@
             {%- if settings.social_tiktok_link != blank -%}
               <li class="list-inline-item">
                 <a href="{{ settings.social_tiktok_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'TikTok' }}">
-                  {%- render 'icon-tiktok' -%}
+                  {%- include 'icon-tiktok' -%}
                   <span class="icon__fallback-text">Tik</span>
                 </a>
               </li>
@@ -41,7 +41,7 @@
             {%- if settings.social_tumblr_link != blank -%}
             <li class="list-inline-item">
               <a href="{{ settings.social_tumblr_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Tumblr' }}">
-                {%- render 'icon-tumblr' -%}
+                {%- include 'icon-tumblr' -%}
                 <span class="icon__fallback-text">Tum</span>
               </a>
             </li>
@@ -49,7 +49,7 @@
             {%- if settings.social_snapchat_link != blank -%}
             <li class="list-inline-item">
               <a href="{{ settings.social_snapchat_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Snapchat' }}">
-                {%- render 'icon-snapchat' -%}
+                {%- include 'icon-snapchat' -%}
                 <span class="icon__fallback-text">Snap</span>
               </a>
             </li>
@@ -57,7 +57,7 @@
             {%- if settings.social_youtube_link != blank -%}
             <li class="list-inline-item">
               <a href="{{ settings.social_youtube_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'YouTube' }}">
-                {%- render 'icon-youtube' -%}
+                {%- include 'icon-youtube' -%}
                 <span class="icon__fallback-text">You</span>
               </a>
             </li>
@@ -65,7 +65,7 @@
             {%- if settings.social_vimeo_link != blank -%}
             <li class="list-inline-item">
               <a href="{{ settings.social_vimeo_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Vimeo' }}">
-                {%- render 'icon-vimeo' -%}
+                {%- include 'icon-vimeo' -%}
                 <span class="icon__fallback-text">Vim</span>
               </a>
             </li>
