--- a/snippets/htmlbuilder-snippet.liquid
+++ b/snippets/htmlbuilder-snippet.liquid
@@ -43,8 +43,8 @@
     </textarea>
   </div>
   <div class="col-md-2 col-mid">
-    <button class="btn btn-outline-secondary btn-html-view" data-id="Snippet">Preview{%- render 'icon-arrow-right' -%}</button>
-    <button class="btn btn-secondary btn-html-copy" data-id="Snippet">Copy {%- render 'icon-copy' -%}</button>
+    <button class="btn btn-outline-secondary btn-html-view" data-id="Snippet">Preview{%- include 'icon-arrow-right' -%}</button>
+    <button class="btn btn-secondary btn-html-copy" data-id="Snippet">Copy {%- include 'icon-copy' -%}</button>
   </div>
   <div class="col-md-3 col-right">
     <div id="htmlView-Snippet" class="html-view shadow html-view--widow">
