--- a/snippets/menu-blocklinks.liquid
+++ b/snippets/menu-blocklinks.liquid
@@ -5,8 +5,8 @@
     <div class="mega-col-inner ">
       <div class="menu-title">
         <a href="{{ childlink.url }}" >
-          {%- render 'processMenuTitle' with itemName:childlink.title -%}
-          {%- render 'processMenuLabel' with itemName:childlink.title -%}
+          {%- include 'processMenuTitle' with itemName:childlink.title -%}
+          {%- include 'processMenuLabel' with itemName:childlink.title -%}
         </a>
       </div>
       <div class="widget-inner">
@@ -15,8 +15,8 @@
           {%- for grandchildlink in childlink.links -%}
           <li>
             <a href="{{ grandchildlink.url }}" >
-              {%- render 'processMenuTitle' with itemName:grandchildlink.title -%}
-              {%- render 'processMenuLabel' with itemName:grandchildlink.title -%}
+              {%- include 'processMenuTitle' with itemName:grandchildlink.title -%}
+              {%- include 'processMenuLabel' with itemName:grandchildlink.title -%}
             </a>
           </li>
           {%- endfor -%}
