--- a/snippets/notifySoldoutProduct.liquid
+++ b/snippets/notifySoldoutProduct.liquid
@@ -2,7 +2,7 @@
   <div class="modal-dialog modal-dialog--soldout modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">{%- render 'icon-close' -%}</button>
+        <button type="button" class="close" data-dismiss="modal">{%- include 'icon-close' -%}</button>
       </div>
       <div class="modal-body">
         <div class="row justify-content-center js-soldout-content">
