--- a/snippets/popup-login.liquid
+++ b/snippets/popup-login.liquid
@@ -3,7 +3,7 @@
   <div class="modal-dialog modal-dialog--login modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header p-0">
-        <button type="button" class="close" data-dismiss="modal">{%- render 'icon-close' -%}</button>
+        <button type="button" class="close" data-dismiss="modal">{%- include 'icon-close' -%}</button>
       </div>
       <div class="modal-body p-5">
         <div class="text-center p-3">
