--- a/snippets/related-products.liquid
+++ b/snippets/related-products.liquid
@@ -21,7 +21,7 @@
       {%- for product in collection_produclists limit: 6 -%}
       {%- if product.handle != currentProduct.handle -%}
       <div class="col">
-        {%- render 'product-card' -%}
+        {%- include 'product-card' -%}
       </div>  
       {%- endif -%}
       {%- endfor -%}
