--- a/snippets/shortcode-tooltip.liquid
+++ b/snippets/shortcode-tooltip.liquid
@@ -1,11 +1,11 @@
-{% capture type %}{% render 'shortcode-render' render:'type' default:'button' %}{% endcapture %}
-{% capture placement %}{% render 'shortcode-render' render:'placement' default:'left' %}{% endcapture %}
-{% capture text %}{% render 'shortcode-render' render:'text' default:'' %}{% endcapture %}
-{% capture title %}{% render 'shortcode-render' render:'title' default:'' %}{% endcapture %}
-{% capture class %}{% render 'shortcode-render' render:'class' default:'btn btn-default' %}{% endcapture %}
-{% capture id %}{% render 'shortcode-render' render:'id' default:'' %}{% endcapture %}
-{% capture url %}{% render 'shortcode-render' render:'url' default:'' %}{% endcapture %}
-{% capture isOpen %}{% render 'shortcode-render' render:'isOpen' default:'' %}{% endcapture %}
+{% capture type %}{% include 'shortcode-render' render:'type' default:'button' %}{% endcapture %}
+{% capture placement %}{% include 'shortcode-render' render:'placement' default:'left' %}{% endcapture %}
+{% capture text %}{% include 'shortcode-render' render:'text' default:'' %}{% endcapture %}
+{% capture title %}{% include 'shortcode-render' render:'title' default:'' %}{% endcapture %}
+{% capture class %}{% include 'shortcode-render' render:'class' default:'btn btn-default' %}{% endcapture %}
+{% capture id %}{% include 'shortcode-render' render:'id' default:'' %}{% endcapture %}
+{% capture url %}{% include 'shortcode-render' render:'url' default:'' %}{% endcapture %}
+{% capture isOpen %}{% include 'shortcode-render' render:'isOpen' default:'' %}{% endcapture %}
 
 {% if url != blank %}
 <a href="{{url}}" {% if isOpen != blank %} target="_blank"{% endif %}>
