--- a/snippets/site-nav.liquid
+++ b/snippets/site-nav.liquid
@@ -4,17 +4,17 @@
     {% assign childlink_url = childlink.url %}
     {% if childlink.links != blank %}
     <a href="{{ childlink_url }}" class="meganav__link meganav__link-toggle site-nav__link-toggle meganav__link--has-list{% if childlink.active %} meganav__link--active{% endif %}" {% if childlink.active %} aria-current="page"{% endif %}>
-      {% render 'processMenuTitle' with itemName:childlink.title %}
-      {% render 'processMenuLabel' with itemName:childlink.title %}
-      {% render 'icon-arrow-right' %}
+      {% include 'processMenuTitle' with itemName:childlink.title %}
+      {% include 'processMenuLabel' with itemName:childlink.title %}
+      {% include 'icon-arrow-right' %}
     </a>
     <div class="site-nav__dropdown site-nav__dropdown--third-level">
       <ul class="meganav__list">
         {% for grandchildlink in childlink.links %}
         <li class="site-nav__dropdown-container site-nav__dropdown-container--third-level">
           <a href="{{ grandchildlink.url }}" class="meganav__link {% if grandchildlink.active %} meganav__link--active{% endif %}"{% if grandchildlink.active %} aria-current="page"{% endif %}>
-            {% render 'processMenuTitle' with itemName:grandchildlink.title %}
-            {% render 'processMenuLabel' with itemName:grandchildlink.title %}
+            {% include 'processMenuTitle' with itemName:grandchildlink.title %}
+            {% include 'processMenuLabel' with itemName:grandchildlink.title %}
           </a>
         </li>
         {% endfor %}
@@ -22,8 +22,8 @@
     </div>
     {% else %}
     <a href="{{ childlink_url }}" class="meganav__link {% if childlink.active %} meganav__link--active{% endif %}"{% if childlink.active %} aria-current="page"{% endif %}>
-      {% render 'processMenuTitle' with itemName:childlink.title %}
-      {% render 'processMenuLabel' with itemName:childlink.title %}
+      {% include 'processMenuTitle' with itemName:childlink.title %}
+      {% include 'processMenuLabel' with itemName:childlink.title %}
     </a>
     {% endif %}
   </li>
