--- a/snippets/social-sharing.liquid
+++ b/snippets/social-sharing.liquid
@@ -8,28 +8,28 @@
   <div class="col {% if center_icons %}text-center{% else %}text-left{% endif %}">
     {% if settings.share_facebook %}
     <a target="_blank" href="//www.facebook.com/sharer.php?u={{ shop.url | append: share_permalink }}" data-tooltip="true" class="social-sharing__link share-facebook" title="{{ 'general.social.alt_text.share_on_facebook' | t }}">
-      {% render 'icon-facebook' %}
+      {% include 'icon-facebook' %}
       <span class="share-title visually-hidden">{{ 'general.social.alt_text.share_on_facebook' | t }}</span>
     </a>
     {% endif %}
 
     {% if settings.share_twitter %}
     <a target="_blank" href="//twitter.com/share?text={{ share_title | url_param_escape }}&amp;url={{ shop.url | append: share_permalink }}" data-tooltip="true" class="social-sharing__link share-twitter" title="{{ 'general.social.alt_text.share_on_twitter' | t }}">
-      {% render 'icon-x' %}
+      {% include 'icon-x' %}
       <span class="share-title visually-hidden">{{ 'general.social.alt_text.share_on_twitter' | t }}</span>
     </a>
     {% endif %}
 
     {% if settings.share_tiktok %}
       <a target="_blank" href="//twitter.com/share?text={{ share_title | url_param_escape }}&amp;url={{ shop.url | append: share_permalink }}" data-tooltip="true" class="social-sharing__link share-twitter" title="{{ 'general.social.alt_text.share_on_twitter' | t }}">
-        {% render 'icon-tiktok' %}
+        {% include 'icon-tiktok' %}
         <span class="share-title visually-hidden">{{ 'general.social.alt_text.share_on_tiktok' | t }}</span>
       </a>
     {% endif %}
 
     {% if settings.share_pinterest %}
     <a data-tooltip="true" target="_blank" href="//pinterest.com/pin/create/button/?url={{ shop.url | append: share_permalink }}&amp;media={{ share_image | img_url: '1024x1024' }}&amp;description={{ share_title | url_param_escape }}" class="social-sharing__link share-pinterest" title="{{ 'general.social.alt_text.share_on_pinterest' | t }}">
-      {% render 'icon-pinterest' %}
+      {% include 'icon-pinterest' %}
       <span class="share-title visually-hidden">{{ 'general.social.alt_text.share_on_pinterest' | t }}</span>
     </a>
     {% endif %}
